tests/toy/pos/000124_cdrc2.toylang
program a = { while a + a do { }; } .
