tests/toy/neg/001424_mutation.toylang
program a = { var a : a int; } .
